New in 5.1.2 version:

   * PW: Hybrid functionals for USPP and PAW still have problems, disabled
   * code "molecularpdos.x" computing PDOS on selected molecular orbitals
     separately computed (courtesy of Guido Fratesi)
   * TDDFPT: a few more options, improved documentation, compatibility
     with "Environ" plugin
   * Added spin-polarized b86r exchange (courtesy of Ikutaro Hamada)

Incompatible changes in 5.1.2 version:

   * XSpectra: variable ef_r, used to eliminate the occupied states
               from the spectrum, replaced by new variable xe0  
   * PHonon: input variable iverbosity => verbosity
   * The (undocumented) *.evp file of CP uses a slightly different format
     (equally undocumented) since v.5.1.1. In order to use original format,
     compile with __OLD_FORMAT preprocessing variable on.

Fixed in 5.1.2 version:

   * Option wf_collect wasn't working with LSDA and one k-point per pool
   * Restarting from interrupted calculations could be spoiled by options
     "startingwfc" and "startingpot": warning added
   * Bug in space-group generator in the monoclinic case.
   * atomic: a small bug was preventing the generation of non-PAW 
     pseudopotentials with GIPAW reconstruction data
   * Changes made in rev.10251 had broken pw.x -pw2casino when just
     one k-point per processor was present. Also: pp converter from upf 
     to casino produced invalid pp for Z>=10 due to insufficient format
   * Symmetry printout could lead to error exit in same cases
   * Restarting from incomplete calculation could lead in some cases
     to mysterious crashes due to usage of unitialized communicator
   * PH: option only_init + US or PAW was not working.
   * Minor printout bug: the printed number of symmetries with fractional
     translations was sometimes incorrect in the noncollinear magnetic case.
 

Incompatible changes in 5.1.1 version:

   * Regularization of DFT names for nonlocal functionals: